[package]
name = "non-dominated-sort"
version = "0.2.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/non-dominated-sort-rs"
description = "Fast Non-Dominated Sort Algorithm"
keywords = ["algorithm", "sort", "pareto"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"] 

[dependencies]
